objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Advisor Candidate - M%26A</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approval</fullName>
        </values>
        <values>
            <fullName>Background Check</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Initial Due Diligence</fullName>
        </values>
        <values>
            <fullName>License Transfer</fullName>
        </values>
        <values>
            <fullName>OBA Review</fullName>
        </values>
        <values>
            <fullName>Proposal Accepted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Channel Sales Process</fullName>
        <description>Opportunities through channel partners.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS Commercial Banking - Small Business Loan</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closing%2FFunding</fullName>
        </values>
        <values>
            <fullName>Initial Due Diligence</fullName>
        </values>
        <values>
            <fullName>Legal Documents In</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Term Sheet Issued</fullName>
        </values>
        <values>
            <fullName>Underwrite</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS Commercial Lending</fullName>
        <description>IDO: FINS Commercial Lending Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>KYC %2F AML</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposed%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS Simple Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS Wealth Management - General</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assessment Needed</fullName>
        </values>
        <values>
            <fullName>Client Presentation</fullName>
        </values>
        <values>
            <fullName>Develop Proposal</fullName>
        </values>
        <values>
            <fullName>Onboarding</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lending Mortgage Process</fullName>
        <description>IDO: Lending demo, from Jigar stage demo</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approval</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Funded</fullName>
        </values>
        <values>
            <fullName>Pre-Approval</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
        <values>
            <fullName>Rate Negotiation</fullName>
        </values>
        <values>
            <fullName>Underwriting Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simple Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Treasury</fullName>
        <description>IDO: Treasury Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>KYC %2F AML</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposed%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Feedback__c</fullName>
        <inlineHelpText>Any comments from Credit Manager and above</inlineHelpText>
        <label>Approval Feedback</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate_TODAY__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Countdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email_1__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Terms__c</fullName>
        <description>Used for Sales Path</description>
        <label>Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Amount__c</fullName>
        <label>DB Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ED_Close_Date_Delta__c</fullName>
        <formula>ED_Predicted_Close_Date__c - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What: This is the number of days before or after the close date the opportunity is predicted to close.  It is calculated by subtracting the Close Date from the Predicted Close Date. This is from the SDO. DO NOT REMOVE.</inlineHelpText>
        <label>ED Close Date Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes__c</fullName>
        <description>What: Einstein Discovery Field. This is from the SDO. DO NOT REMOVE.</description>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ED_Outcome__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <inlineHelpText>This is the number of DAYS after the Created Date that this opportunity is targeted to close.</inlineHelpText>
        <label>ED Predicted Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Predicted_Close_Date__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <formula>DateTimeCreated__c + ED_Outcome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is calculated by adding the number of days in the &quot;ED Predicted Time to Close&quot; field to the CREATED DATE.</inlineHelpText>
        <label>ED Predicted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Prescription__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exec_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader</description>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity DIscovery.</inlineHelpText>
        <label>Executive Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Agency_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency/Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Agency/Broker)</relationshipLabel>
        <relationshipName>Opportunities_Agency_Broker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Application_Received_Date__c</fullName>
        <label>Application Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FINS_Average_Client_Age__c</fullName>
        <label>Average Client Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Boosting_Reason__c</fullName>
        <inlineHelpText>Select the reason why the opportunity is trending up.</inlineHelpText>
        <label>Einstein - Deal Boosting Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A higher than usual number of prospect participants</fullName>
                </value>
                <value>
                    <fullName>An increase in email volume</fullName>
                </value>
                <value>
                    <fullName>Emails content</fullName>
                </value>
                <value>
                    <fullName>An increase in number of meetings</fullName>
                </value>
                <value>
                    <fullName>A higher than usual number of internal participants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small/Select</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CRD__c</fullName>
        <label>CRD #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Commercial_Banking_Close_Plan__c</fullName>
        <description>IDO Commercial Banking Close Plan Quip Document</description>
        <label>Close Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_Competitor_Mentioned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;Competitor Mentioned&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - Competitor Mentioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Competitor_they_Mentioned__c</fullName>
        <inlineHelpText>What competitor did they mention?</inlineHelpText>
        <label>Einstein - Competitor they Mentioned</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Contact_to_email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact to email</inlineHelpText>
        <label>Einstein - Contact to Email</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Custodian__c</fullName>
        <label>Custodian</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Schwab</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>Pershing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Deal_Slowing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;Deal Slowing&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - Deal Slowing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Deal_boosting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;Deal Boosting&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - Deal Boosting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Decision_Role__c</fullName>
        <description>Used for deal registration.</description>
        <label>Decision Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Email_Body__c</fullName>
        <inlineHelpText>Body for email template</inlineHelpText>
        <label>Einstein - Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Email_Subject__c</fullName>
        <inlineHelpText>Subject for the email template</inlineHelpText>
        <label>Einstein - Email Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Exec_Briefing__c</fullName>
        <label>Exec Briefing</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_GP_Commitment__c</fullName>
        <label>GP Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Initial_Pitch_Date__c</fullName>
        <label>Initial Pitch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Insurance_PolicyCenter_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PolicyCenter Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Insurance_Rating_State__c</fullName>
        <label>Rating State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Last_Activity_Subject__c</fullName>
        <inlineHelpText>Subject for the last activity in the insights</inlineHelpText>
        <label>Einstein - Last Activity Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Last_Activity_Text__c</fullName>
        <inlineHelpText>Enter the text to be displayed with the last activity in the insight</inlineHelpText>
        <label>Einstein - Last Activity Text</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Last_Activity_Type__c</fullName>
        <inlineHelpText>What was the last activity this insight tracked?</inlineHelpText>
        <label>Einstein - Last Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Lending_Approved_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Interest_Rate__c</fullName>
        <defaultValue>0.18</defaultValue>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>FINS_Lending_Loan__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Max_Loan__c</fullName>
        <defaultValue>675000</defaultValue>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Loan</fullName>
                </value>
                <value>
                    <fullName>Loan Against Property</fullName>
                </value>
                <value>
                    <fullName>SME Loan</fullName>
                </value>
                <value>
                    <fullName>Two Wheeler Loan</fullName>
                    <label>Auto Loan</label>
                </value>
                <value>
                    <fullName>Personal Loan</fullName>
                </value>
                <value>
                    <fullName>SBL</fullName>
                    <label>Suvidha Loan</label>
                </value>
                <value>
                    <fullName>Consumer Durable Loan</fullName>
                </value>
                <value>
                    <fullName>Education Loan</fullName>
                </value>
                <value>
                    <fullName>Gold Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FINS_Margin__c</fullName>
        <label>Margin</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Name_of_Contact__c</fullName>
        <inlineHelpText>Name of the contact who mentioned the competitor</inlineHelpText>
        <label>Einstein - Name of Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_No_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;No Communication&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - No Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_P_E_Ratio__c</fullName>
        <label>P/E Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_NDA_Date__c</fullName>
        <label>NDA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Project_Budget__c</fullName>
        <description>Used for deal registration.</description>
        <label>Project Budget</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Prospect_Unresponsive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to display the &apos;prospect unresponsive&apos; insight on this oppty</inlineHelpText>
        <label>Einstein - Prospect Unresponsive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Quote_Due_By__c</fullName>
        <label>Quote Due By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Re_engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Re-engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Renewal_Date__c</fullName>
        <description>Date of renewal</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Requested_Amount__c</fullName>
        <description>Amount of money for account, mortgage, retirement assets, loan, credit card or other financial services product.</description>
        <inlineHelpText>Amount of money for account, mortgage, retirement assets, loan, credit card or other financial services product.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Residence_Type__c</fullName>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Company Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Revenue_Frequency__c</fullName>
        <description>Frequency of revenue</description>
        <label>Revenue Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Revenue_Type__c</fullName>
        <description>Type of revenue</description>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New: Existing Client, New LoB</fullName>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>Renewal: Existing Client, Existing LoB</fullName>
                </value>
                <value>
                    <fullName>Run-Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Services_Discussed__c</fullName>
        <description>Discussed services</description>
        <label>Services Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit Services</fullName>
                </value>
                <value>
                    <fullName>Executive Risk/D&amp;O</fullName>
                </value>
                <value>
                    <fullName>HR Consulting</fullName>
                </value>
                <value>
                    <fullName>M&amp;A Advisory</fullName>
                </value>
                <value>
                    <fullName>Risk Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Slowing_Reason__c</fullName>
        <label>Einstein - Deal Slowing Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A decrease in email volume</fullName>
                </value>
                <value>
                    <fullName>Emails content</fullName>
                </value>
                <value>
                    <fullName>A decrease in number of meetings</fullName>
                </value>
                <value>
                    <fullName>A lower than usual number of internal participants</fullName>
                </value>
                <value>
                    <fullName>A lower than usual number of prospect participants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Task_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Task Overdue</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>